@@ -1,3 +1,6 @@
+spiped-1.3.1
+* Fix build by adding missing <stdint.h> #include.
+* Minor code cleanups.
 spiped-1.3.0
 * Bug fix: spiped now correctly closes connections which have been reset;
   in earlier versions spiped could erronously hold "dead" connections open
